plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'gui'
    mainClass = 'gui.ChatApplication'
}

javafx {
    version = '17.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation 'ch.qos.logback:logback-classic:1.2.9'
    implementation 'ch.qos.logback:logback-core:1.2.9'
    implementation 'org.slf4j:slf4j-api:1.7.30'

    implementation 'org.jsoup:jsoup:1.15.3'
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation 'com.google.code.gson:gson:2.10.1'



}


test {
    useJUnitPlatform()
}
//
//jlink {
//    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
//    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
//    launcher {
//        name = 'app'
//    }
//}

jlinkZip {
    group = 'distribution'
}

